.build-issues/mydocs-plog-backup/Orchestration/Kubernetes/assets/yaml/mbm-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: mbm
  annotations:
    kubernetes.io/ingress.class: nginx-mbm
spec:
  ingressClassName: nginx-mbm
  rules:
    - host: www.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-root-service
                port:
                  number: 80
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: nginx-app1-service
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: nginx-app2-service
                port:
                  number: 80
